...
        android:layout_height="77dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/enterClass"
        app:layout_constraintEnd_toStartOf="@+id/courseID"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/course"
        android:layout_width="183dp"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="4dp"
        android:onClick="onAddCourseClicked"
        android:text="@string/enter"
        app:layout_constraintBottom_toTopOf="@+id/DoneClass"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/courseID"
        android:layout_width="183dp"
        android:layout_height="77dp"
...
